// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PizzaSlots > with custom pizza slot 1`] = `
"<div data-v-81b24109=\\"\\" class=\\"pizza-box\\">
  <h1 data-v-81b24109=\\"\\" class=\\"pizza-title\\">Custom pizza</h1>
  <h2>foobar</h2>
</div>"
`;

exports[`PizzaSlots > with custom topping scoped slot 1`] = `
"<div data-v-81b24109=\\"\\" class=\\"pizza-box\\">
  <h1 data-v-81b24109=\\"\\" class=\\"pizza-title\\">Custom pizza</h1>
  <div data-v-81b24109=\\"\\">Pan crust thicker and fluffer, made with whole wheat flour</div>
  <div data-v-81b24109=\\"\\">Tomato sauce</div> Toppings: <ul data-v-81b24109=\\"\\">
    <li data-v-81b24109=\\"\\">abc-mozzarella</li>
    <li data-v-81b24109=\\"\\">abc-basil</li>
  </ul>
</div>"
`;

exports[`PizzaSlots > with default content 1`] = `
"<div data-v-81b24109=\\"\\" class=\\"pizza-box\\">
  <h1 data-v-81b24109=\\"\\" class=\\"pizza-title\\">Custom pizza</h1>
  <div data-v-81b24109=\\"\\">Pan crust thicker and fluffer, made with whole wheat flour</div>
  <div data-v-81b24109=\\"\\">Tomato sauce</div> Toppings: <ul data-v-81b24109=\\"\\">
    <li data-v-81b24109=\\"\\">Mozzarella</li>
    <li data-v-81b24109=\\"\\">Basil</li>
  </ul>
</div>"
`;
